--- a/frontend/style.css
+++ b/frontend/style.css
@@ -223,8 +223,8 @@ body, html {
     background-color:rgba(0, 0, 0, 0.1);;
     display: block;
     margin: 0 auto;
-    width: 400px; /* Відповідає BLOCK_SIZE * BOARD_WIDTH (40 * 10) */
-    height: 800px; /* Відповідає BLOCK_SIZE * BOARD_HEIGHT (40 * 20) */
+    width: 300px; 
+    height: 600px; 
     position: fixed;
     bottom: 8%;
 }
