--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,13 +1,24 @@
-body, html {
+
+
+body{
   margin: 0;
   padding: 0;
   height: 100%;
   font-family: sans-serif;
 }
+
 .mobile-window {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background: radial-gradient(circle at 10% 10%, #4caacf 0%, transparent 10%),
+              radial-gradient(circle at 80% 20%, #000000 0%, transparent 50%),
+              radial-gradient(circle at 90% 90%, #005873 0%, transparent 60%),
+              radial-gradient(circle at 60% 80%, #009fd9 0%, transparent 50%),
+              #4caacf;
+    background-blend-mode: screen;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .content {
@@ -27,28 +38,31 @@ body, html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 60px;
-  background-color: #ff9100;
+  height: 100px;
+  background-color: #007090;
   border-top: 1px solid #ccc;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   z-index: 999;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 .button-container button {
   flex: 1;
   height: 100%;
   background: none;
-  border: none;
+  border: 10px;
+  z-index: 1001;
 }
 
 .button-container button {
   cursor: pointer;
   outline: 0 !important;
   border: 0 !important;
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   border-radius: 7px;
   background-color: transparent;
   display: flex;
@@ -57,22 +71,24 @@ body, html {
   color: #fff;
   transition: all ease-in-out 0.3s;
   position: relative;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .button-container button:active {
-    background-color: black;  
+    background-color: #008cb2;  
 }
 .button-play {
   position: fixed;
-  bottom: 11%; 
-  width: 410px;
-  height: 40px;
-  background: #15ccbe;
+  bottom: 22%; 
+
+  height: 50px;
+  background: #00b0f2;
   color: white;
   font-family: "Istok Web", sans-serif;
   letter-spacing: 1px;
   font-size: 14px;
-  border: 1px solid #0f988e;
+  border: 2px solid #0099c4;
   border-radius: 3px;
   text-transform: uppercase;
   display: flex;
@@ -83,20 +99,23 @@ body, html {
   box-shadow:
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
-    0 3px 0 #0f988e,
+    0 3px 0 #0099c4,
     0 5px 10px rgba(0, 0, 0, 0.1);
   transition: 150ms all ease-in-out;
+  border-radius: 20px;
+  left:2.5%;
+  right:2.5%;
 }
 .restart {
   position: relative;
   width: 300px;
   height: 40px;
-  background: #15ccbe;
+  background: #00b0f2;
   color: white;
   font-family: "Istok Web", sans-serif;
   letter-spacing: 1px;
   font-size: 14px;
-  border: 1px solid #0f988e;
+  border: 1px solid #00b0f2;
   border-radius: 3px;
   text-transform: uppercase;
   display: flex;
@@ -107,7 +126,7 @@ body, html {
   box-shadow:
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
-    0 3px 0 #0f988e,
+    0 3px 0 #00b0f2,
     0 5px 10px rgba(0, 0, 0, 0.1);
   transition: 150ms all ease-in-out;
   margin-top: 10px;
@@ -118,7 +137,7 @@ body, html {
     inset 0 16px 2px -15px rgba(0, 0, 0, 0),
     inset 0 0 0 1px rgba(255, 255, 255, 0.15),
     inset 0 1px 20px rgba(0, 0, 0, 0.1),
-    0 0 0 #0f988e,
+    0 0 0 #00b0f2,
     0 0 0 2px rgba(255, 255, 255, 0.5),
     0 0 0 rgba(0, 0, 0, 0),
     0 0 0 rgba(0, 0, 0, 0);
@@ -154,12 +173,12 @@ body, html {
   position: relative;
   width: 300px;
   height: 40px;
-  background: #15ccbe;
+  background: #00b0f2;
   color: white;
   font-family: "Istok Web", sans-serif;
   letter-spacing: 1px;
   font-size: 14px;
-  border: 1px solid #0f988e;
+  border: 1px solid #00b0f2;
   border-radius: 3px;
   text-transform: uppercase;
   display: flex;
@@ -170,7 +189,7 @@ body, html {
   box-shadow:
     inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
     inset 0 0 0 1px rgba(255, 255, 255, 0.3),
-    0 3px 0 #0f988e,
+    0 3px 0 #0099c4,
     0 5px 10px rgba(0, 0, 0, 0.1);
   transition: 150ms all ease-in-out;
   margin-top: 10px;
@@ -181,7 +200,7 @@ body, html {
     inset 0 16px 2px -15px rgba(0, 0, 0, 0),
     inset 0 0 0 1px rgba(255, 255, 255, 0.15),
     inset 0 1px 20px rgba(0, 0, 0, 0.1),
-    0 0 0 #0f988e,
+    0 0 0 #00b0f2,
     0 0 0 2px rgba(255, 255, 255, 0.5),
     0 0 0 rgba(0, 0, 0, 0),
     0 0 0 rgba(0, 0, 0, 0);
@@ -199,24 +218,60 @@ body, html {
   transition: all 0.5s ease-in-out;
 }
 .button-play:active {
-  transform: translateY(3px);
+   transform: translateY(3px);
   box-shadow:
-    inset 0 16px 2px -15px rgba(0, 0, 0, 0),
-    inset 0 0 0 1px rgba(255, 255, 255, 0.15),
-    inset 0 1px 20px rgba(0, 0, 0, 0.1),
-    0 0 0 #0f988e,
-    0 0 0 2px rgba(255, 255, 255, 0.5),
-    0 0 0 rgba(0, 0, 0, 0),
-    0 0 0 rgba(0, 0, 0, 0);
-}
-.button-play:hover .text {
-  transform: translateX(220px);
-  transition: all 0.5s ease-in-out;
-}
-.button-play:hover .icon {
-  transform: translate(23px);
+    inset 0 16px 2px -15px #00c8ff,
+    inset 0 0 0 1px #00c8ff,
+    inset 0 1px 20px #00c8ff,
+    0 0 0 #00b0f2,
+    0 0 0 2px #00c8ff,
+    0 0 0 #00c8ff,
+    0 0 0 #00c8ff;
+    border: #00c8ff;
 }
 
+
+
+.change-rule{
+  position: fixed;
+  bottom: 14%; 
+  height: 50px;
+  background: #00b0f2;
+  color: white;
+  font-family: "Istok Web", sans-serif;
+  letter-spacing: 1px;
+  font-size: 14px;
+  border: 2px solid #0099c4;
+  border-radius: 3px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  cursor: pointer;
+  box-shadow:
+    inset 0 30px 30px -15px rgba(255, 255, 255, 0.1),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.3),
+    0 3px 0 #0099c4,
+    0 5px 10px rgba(0, 0, 0, 0.1);
+  transition: 150ms all ease-in-out;
+  border-radius: 20px;
+  left:2.5%;
+  right: 2.5%;
+}
+
+.change-rule:active{
+   transform: translateY(3px);
+  box-shadow:
+    inset 0 16px 2px -15px #00c8ff,
+    inset 0 0 0 1px #00c8ff,
+    inset 0 1px 20px #00c8ff,
+    0 0 0 #00b0f2,
+    0 0 0 2px #00c8ff,
+    0 0 0 #00c8ff,
+    0 0 0 #00c8ff;
+    border: #00c8ff;
+}
 /* Сама гра */
 #tetrisCanvas {
     border: 10px solid #333;
@@ -267,34 +322,29 @@ body, html {
 
 /* STYLE FOR GIF TETRIS GAME */
 .tetris-container {
-  
   --animation-duration: 10s;
   --grid-size-x: 6;
   --grid-size-y: 9;
-  --square-size: 4rem;
+  --square-size: 3.5rem;
   z-index: 999;
 }
 
 /* Container */
 .tetris-container {
-  background: rgba(0, 0, 0, 0.1);
-  border: 10px solid #333;
+  background: #008cb2;
+  border: 2px solid #0099c4;
   box-sizing: content-box;
   height: calc(var(--grid-size-y) * var(--square-size));
   overflow: hidden;
   position: fixed;
   z-index: 999;
-  bottom: 20%;
+  bottom: 30%;
   width: calc(var(--grid-size-x) * var(--square-size));
+  border-radius: 20px;
 }
 
 /* Container - Grid */
 .tetris-container::before {
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0.05) 1px,
-      transparent 1px
-    ),
-    linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
   background-size: var(--square-size) var(--square-size);
   content: "";
   position: absolute;
@@ -344,6 +394,7 @@ body, html {
   grid-row-start: calc(var(--grid-size-y) - var(--square-pos-y) + 1);
   height: var(--square-size);
   width: var(--square-size);
+  border-radius: 20px;
 }
 
 /* Mapping */
@@ -517,3 +568,177 @@ body, html {
   position: relative;
   z-index: 1000;
 }
+
+#userPhoto{
+  display: flex; 
+  position: fixed;
+  bottom: 70%;
+  left: 2.5%;
+  padding: 20px; 
+  width: 100px; 
+  height: 100px; 
+  border-radius: 20px; 
+  background-color: aquamarine;
+}
+
+#userName{
+  display: flex;
+  position: fixed;
+  bottom: 83%;
+  right: 2.5%;
+  padding: auto;
+  font: optional;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+#idaccount{
+  display: flex;
+  position: fixed;
+  bottom: 79%;
+  right: 2.5%;
+  padding: auto;
+  font-size: small;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+#text{
+  position: fixed;
+  bottom: 0;
+}
+
+#button-account{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  border: 2px solid #008cb2;
+  position: fixed;
+  bottom: 55%;
+  left: 2.5%;
+  right: 2.5%;
+  z-index: 999;
+  border-radius: 20px;
+}
+#button-account button{
+  cursor: pointer;
+  outline: 0 !important;
+  border: 0 !important;
+  width: 30%;
+  height: 90%;
+  border-radius: 20px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  transition: all ease-in-out 0.3s;
+  position: relative;
+  font-size: larger;
+  font-weight: bold;
+  margin-left: 0.1%;
+  margin-right: 0.1%;
+}
+
+#button-account button:active{
+  background-color: #008cb2;
+}
+
+#button-account button:has(input:checked){
+  color: #ffffff;
+}
+
+#button-account button:has(#button-account:nth-child(1):hover){
+  transform: rotateY(-30deg);
+}
+
+#button-account button:has(#button-account:nth-child(1):hover){
+  transform: rotateY(-35deg);
+}
+
+#invite_conteiner{
+  display: flex;
+  background-color:#008cb2;
+  border:#000000;
+  border-radius: 20Px;
+  position: fixed;
+  bottom: 40%;
+  height: 100px;
+  right: 2.5%;
+  left: 2.5%;
+}
+.hidden {
+  display: none;
+}
+
+.top-container{
+  background-color: #008cb2;
+  display: flex;
+  border-radius: 20px;
+  position: fixed;
+  left: 2.5%;
+  right: 2.5%;
+  bottom: 90%;
+  height: 60px;
+}
+
+#text-forbutton{
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  bottom: 1.5%;
+  font-weight: bold;
+}
+
+#Homiak{
+  height: 60px;
+  position: fixed;
+  bottom:3%;
+}
+
+#Wallet{
+  height: 70px;
+  position: fixed;
+  bottom:1%;
+}
+
+#Task{
+  height: 72px;
+  position: fixed;
+  bottom:2%;
+}
+
+#Account{
+  height: 70px;
+  position: fixed;
+  bottom: 2%;
+  left: 5.2%;
+}
+
+#Lobby{
+  height: 65px;
+  position: fixed;
+  bottom: 2.5%;
+}
+
+.back-container-down-class{
+  background-color: #008cb2;
+  position: fixed;
+  height: 80px;
+  width: 100px;
+  border-radius: 20px;
+  border: 2px solid #0099c4;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.back-container-down-class.active{
+  border-radius: 20px;
+  border: 2px solid #00c8ff;
+  position: fixed;
+  height: 80px;
+  width: 100px;
+  z-index: -1;
+}
+
